# cpp-hub-demo

./: .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTE.md  README.md  vcpkg.json
include/cpp_hub/: cli.hpp  config.hpp  registry.hpp  renderer.hpp  template_manifest.hpp
include/cpp_hub/util/: fs.hpp  process.hpp  string_utils.hpp
registry/: index.json
src/: main.cpp
src/cli/: cli.cpp
src/core/: config.cpp  registry.cpp  renderer.cpp  template_manifest.cpp
src/util/: fs.cpp  process.cpp  string_utils.cpp
